<resources>
    <string name="app_name">UTS</string>
    <string name="textView2">Selamat Datang</string>
    <string name="imageView_Main_Gambar">Activty Main Picture</string>
    <string name="button">SUBMIT</string>
    <string name="nama">achmad fauzan al wasfi</string>
    <string name="nim">3420170035</string>
    <string name="email">achmadfauzanalwasfi@gmail.com</string>
    <string name="sejarah">
        Stadion Utama Gelora Bung Karno adalah sebuah stadion serbaguna di Jakarta,
        Indonesia yang merupakan bagian dari kompleks olahraga Gelanggang Olahraga Bung Karno.
        Stadion ini umumnya digunakan sebagai arena pertandingan sepak bola tingkat internasional.
    </string>
    <string name="textView_Main_Header">Sejarah GBK</string>
    <string name="imageView_Main_Gambar2">Picture</string>
    <string name="button_Main_Submit">Submit</string>
    <string name="deskripsi">
        Monas mulai dibangun pada bulan Agustus 1959.
        Keseluruhan bangunan Monas dirancang oleh para arsitek Indonesia yaitu Soedarsono,
        Frederich Silaban dan Ir. Rooseno. Pada tanggal 17 Agustus 1961,
        Monas diresmikan oleh Presiden Soekarno.
        Dan mulai dibuka untuk umum sejak tanggal 12 Juli 1975.
    </string>
    <string name="textView_Main_Judul">Ringkasan</string>
    <string name="imageView_Main_Banner">Banner Image</string>
    <string name="imageView_Foto">afal</string>
    <string name="textView_Nama_Mahasiswa">Achmad Fauzan Al Wasfi</string>
    <string name="textView_Nim_Mahasiswa">3420170035</string>
    <string name="textView_Main_Judul1">Masukan Pesan</string>
    <string name="textView_Umur">Umur 21 Tahun</string>
    <string name="textView_Nim">3420170035</string>
    <string name="button_Main_Submit1">Panggil Activity Dua</string>
    <string name="textView_Dua_Judul">Ini adalah activity 2</string>
    <string name="textView_Main_Judul2">Menghitung Segitiga</string>
    <string name="textView_Main_Alas">Masukan Alas</string>
    <string name="textView_Main_Tinggi">Masukan Tinggi</string>
    <string name="button_Main_Hitung">Hitung</string>
    <string name="textView_Hasil_Nilai">Hasil SegiTiga</string>
    <string name="_3420170035">3420170035</string>
    <string name="dirancang_oleh">Disusun Oleh</string>
    <string name="achmad_fauzan_al_wasfi">Achmad Fauzan Al Wasfi</string>
    <string name="textView_Main_Judul7">Program Menghitung Persegi</string>
    <string name="imageView_Main_Bg">Main Background</string>
    <string name="textView_Main_Panjang">Masukan Panjang</string>
    <string name="textView_Main_Lebar">Masukan Lebar</string>
    <string name="textView_Main_Password">Masukan Password</string>
    <string name="button_Main_Hitung1">Hitung</string>
    <string name="jd_band">Band Favorite</string>
    <string name="jd_makanan">Makanan Favorite</string>
    <string name="cb1">Muse</string>
    <string name="cb2">Tokyo Jihen</string>
    <string name="cb3">Nirvana</string>
    <string name="rb1">Nasi Goreng</string>
    <string name="rb2">Sayur Capcay</string>
    <string name="rb3">Kentang Rebus</string>
    <string name="bintang">
        Bintang 5: Sangat setuju \n
        Bintang 4: Setuju \n
        Bintang 3: Kurang setuju \n
        Bintang 2: Tidak setuju \n
        Bintang 1: Sangat tidak setuju
    </string>
    <string name="konfirmasi">Yakin mau keluar dari sistem?</string>


</resources>