<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Latihan_7">
    <ImageView
        android:id="@+id/imageView_Main_Bg"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imageView_Main_Bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pdmn" />

    <TextView
        android:id="@+id/textView_Main_Judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Judul7"
        android:textColor="#337835"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Main_Panjang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Panjang"
        android:textColor="#2A6E2D"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Judul" />

    <EditText
        android:id="@+id/editText_Main_Panjang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/textView_Main_Panjang"
        android:ems="10"
        android:hint="@string/textView_Main_Panjang"
        android:textColor="#222B61"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Panjang" />

    <TextView
        android:id="@+id/textView_Main_Lebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Lebar"
        android:textColor="#317134"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/editText_Main_Panjang" />

    <EditText
        android:id="@+id/editText_Main_Lebar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/textView_Main_Lebar"
        android:autofillHints="@string/textView_Main_Lebar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Lebar" />

    <TextView
        android:id="@+id/textView_Main_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textView_Main_Password"
        android:textColor="#2E6C31"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/editText_Main_Lebar" />

    <EditText
        android:id="@+id/editText_Main_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/textView_Main_Password"
        android:autofillHints="@string/textView_Main_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Password" />

    <Button
        android:id="@+id/button_Main_Hitung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#2B6A2E"
        android:text="@string/button_Main_Hitung1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Main_Bg"
        app:layout_constraintTop_toBottomOf="@+id/editText_Main_Password" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="130dp"
        android:layout_height="116dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/afal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_nim"
        android:layout_width="113dp"
        android:layout_height="21dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="79dp"
        android:text="@string/_3420170035"
        android:textColor="#181819"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nama" />

    <TextView
        android:id="@+id/textView_nama"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="22dp"
        android:text="@string/achmad_fauzan_al_wasfi"
        android:textAlignment="viewStart"
        android:textColor="#222327"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Main_Hitung" />

</androidx.constraintlayout.widget.ConstraintLayout>