<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Latihan_4">
    TextView
    android:id="@+id/textView_Main_Judul"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/textView_Main_Judul"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Submit_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_Main_Submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Judul" />

    <EditText
        android:id="@+id/editText_Main_Pesan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="@string/textView_Main_Judul"
        android:hint="@string/textView_Main_Judul"
        app:layout_constraintEnd_toStartOf="@+id/Submit_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Main_Judul" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="92dp"
        android:text="@string/textView_Nama_Mahasiswa"
        app:layout_constraintStart_toEndOf="@+id/imageView_Foto"
        app:layout_constraintTop_toBottomOf="@+id/Submit_4" />

    <ImageView
        android:id="@+id/imageView_Foto"
        android:layout_width="118dp"
        android:layout_height="143dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="277dp"
        android:layout_marginBottom="160dp"
        android:contentDescription="@string/imageView_Foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Submit_4"
        app:layout_constraintVertical_bias="0.2"
        app:srcCompat="@drawable/afal" />

    <TextView
        android:id="@+id/textView_nim_Mahasiswa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="60dp"
        android:text="@string/textView_Nim_Mahasiswa"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_Foto"
        app:layout_constraintStart_toEndOf="@+id/imageView_Foto"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.372" />

</androidx.constraintlayout.widget.ConstraintLayout>